DEV-309: Implemented tests, refactoring code, created application.properties for tests especially for RScriptService.